# The-Movie-Database-Data-Analysis

./: 1. API-scraper.ipynb  2. Preprocessing.ipynb  3. Data analysis.ipynb  pyproject.toml  requirements.txt
